Much needed improvements.
- Added ability to move the browser around the desktop.
- Added Settings and About dialogue for future improvements.
- Changed layout of browser to be easier to understand.
- Added menu. (It is in very early development and only contains 'About' as of now.)

This is a release build. Once added to the master branch, please release.

--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="Home" Type="System.String" Scope="User">
-      <Value Profile="(Default)">https://google.co.uk</Value>
+      <Value Profile="(Default)">https://www.google.co.uk</Value>
     </Setting>
   </Settings>
 </SettingsFile>
