--- a/Eclipse.vbproj
+++ b/Eclipse.vbproj
@@ -167,6 +167,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Logo.ico" />
+    <None Include="Resources\menu.png" />
+    <None Include="Resources\home.png" />
+    <None Include="Resources\refresh.png" />
+    <None Include="Resources\fwrd.png" />
+    <None Include="Resources\back.png" />
     <None Include="Resources\PictureBox2.Image.png" />
   </ItemGroup>
   <ItemGroup>
